# MapDatasetGenerator

./: .gitignore  ChangeLog.txt  LICENSE  README.md  env.yaml  generate_patches.py  maps.py  osm2graphdata.py  pyproject.toml  read.py  read_patches.py  readmbtiles.py  requirements.txt  run.py  sliceimages.py  test.py
data/input/: sf_layered.txt
docs/: README.md  _config.yml
src/: maps.py  osm2imgdata.py  read.py  readmbtiles.py  run.py  sliceimages.py
src/MapDatasetGenerator/: osm2graphdata.py
src/lib/: ImageGroupReader.py  __init__.py
src/mapdataset/: run.py
src/mapdataset/lib/: ImageUtils.py  __init__.py  maps.py
