[tool.poetry]
name = "MapDatasetGenerator"
version = "0.0.1"
description = "MapDatasetGenerator"
authors = ["Ishaan"<iparanja@ucsc.edu>, "Adhocmaster <adhocmaster@live.com>"]
license = "Mozilla Public License Version 2.0"
packages = [
    {include="junctionart", from="."},
    {include="pyodrx", from="."}
]

[tool.poetry.dependencies]
python = "^3.7.9"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
