[tool.poetry]
name = "MapDatasetGenerator"
version = "0.0.1"
description = "MapDatasetGenerator"
authors = ["Ishaan <iparanja@ucsc.edu>", "Adhocmaster <adhocmaster@live.com>"]
readme = "README.md"
license = "Mozilla Public License Version 2.0"
packages = [
    {include="src", from="."}
]

[tool.poetry.dependencies]
python = "^3.7.9"
dill = "^0.3.5.1"
Pillow = "^9.2.0"
torch = "^1.12.1"
tqdm = "^4.64.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
