[tool.poetry]
name = "MapDatasetGenerator"
version = "0.0.1"
description = "Map dataset generator for learning map representations and generation"
authors = ["Ishaan <iparanja@ucsc.edu>", "Golam Md Muktadir <muktadir@ucsc.edu", "Bahar Bateni <bbateni@ucsc.edu>"]
readme = "README.md"

homepage = "https://github.com/AugmentedDesignLab/MapDatasetGenerator"
repository = "https://github.com/AugmentedDesignLab/MapDatasetGenerator"
keywords = ["Map Dataset", "OSM to image"]
license = "Mozilla Public License Version 2.0"

include = [
    "LICENSE",
]

packages = [
    {include="MapDatasetGenerator", from="./src"}
]

[tool.poetry.dependencies]
python = "^3.7.9"
dill = "^0.3.5.1"
Pillow = "^9.2.0"
torch = "^1.12.1"
tqdm = "^4.64.1"
mbutil = "^0.3.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
